--- a/android-app/src/main/res/layout-land/activity_main.xml
+++ b/android-app/src/main/res/layout-land/activity_main.xml
@@ -13,8 +13,8 @@
     <Button android:id="@+id/shot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_margin="10dp"
         android:background="@drawable/shot_button"
         android:contentDescription="@string/cd_shot"
