--- a/android-app/src/main/res/values/dimens.xml
+++ b/android-app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
 
     <dimen name="shot_button_size">60dp</dimen>
 
+    <dimen name="default_spacing">15dp</dimen>
+    <dimen name="large_spacing">45dp</dimen>
+
     </resources>
