--- a/android-app/src/main/res/layout/connection_error_dialog.xml
+++ b/android-app/src/main/res/layout/connection_error_dialog.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cover"
-    android:visibility="invisible">
+    android:background="@color/cover">
 
     <LinearLayout
         android:layout_width="wrap_content"
