--- a/android-app/src/main/res/drawable/button_shot_disabled.xml
+++ b/android-app/src/main/res/drawable/button_shot_disabled.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/shot_button_normal"/>
+    <solid android:color="@color/disabled"/>
     <size
         android:width="@dimen/shot_button_size"
         android:height="@dimen/shot_button_size"/>
