--- a/android-app/src/main/res/values/colors.xml
+++ b/android-app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="shot_button_normal">#80287aa9</color>
-    <color name="shot_button_disabled">#60808080</color>
+    <color name="primary">#ff287aa9</color>
+    <color name="primary_transparent">#80287aa9</color>
+    <color name="disabled">#60808080</color>
     <color name="cover">#80404040</color>
     <color name="progress_label">#e0e0e0</color>
 </resources>
